# ansible-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ansible.cfg  playbook.yml  pyproject.toml  requirements.txt  setup.sh
