[project]
name = "ansible-template"
version = "0.1.0"
description = "This repository is a minimal, best-practice template for managing Ansible playbooks in a Python virtual environment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible-dev-tools>=25.9.0",
    "ansible-vault>=4.1.0",
    "awxkit>=24.6.1",
]

